css/style.css
/* Small-range 0, 640px */
/* Medium-range 641px, 1024px */
/* Large-range 1025px, 1440px */
/* 1441px, 1920px */
/* 1921px */
html, body, #container {
  height: 100%;
 }
#container{
  background-color: #858585;
}
body {
  margin: 0;
  padding: 0;
  font: 100% Helvetica, sans-serif; }
#map{
/*  height: 100%;*/
  width: 100%;
}
/*--------------- Audio ----------------*/
  audio {
      position: relative;
      width: 300px;
      top: 0px;
      margin-top: 0px;
      background: #6d6d6d;

  }
/*--------------- Splash Page ----------------*/

#splash{   
    margin:25px 7.5% 25px 7.5%;
}
h1{
 font-size: 3em;
 text-align: center;
}
h2{
 font-size: 1em;    
}
h3{
    font-size: 1em;
    text-align: center;
}
.reveal-modal{
  z-index: 999;
}

/*--------------- reveal for help, info and text overlays ----------------*/
@media only screen and (min-width: 40em) and (max-width: 600em) {
#container{
    margin-bottom: -250px;
  padding-bottom: -250px;
  overflow: hidden;
}
 .top-bar {
  z-index: 800;
  position: fixed;
  top:0px;
  background: none repeat scroll 0 0 #6d6d6d;
  /*  this will change with screen size*/
  width: 100%; 
  height: 0px;
}

.script {
  margin: 15px;
  color: #fff;
}
#map{
  position: absolute;
    z-index: 2;
    height: calc(100% - 150px);

   
   top:45px;
   padding-bottom: -300px;

   
 /*   padding-bottom: -250px;
    margin-bottom: -250px;*/
  }
  #audioText {
   z-index: 900;
  position: fixed;
  background: none repeat scroll 0 0 #858585;
  height: 150px;
  bottom:0px;
  width: 100%;
  overflow:scroll;
/*
  margin-top: 0px;
  top: 0px;

  color: #fff;
  width: 100%;
 z-index: 0;*/

}
.reveal-modal {
    z-index: 999;
  }
   .reveal-modal-bg {
    width: 200%;
    height: 200%;
    z-index: 991;
  }
 }}
 
 #audioText{
  z-index: 900;
 }

   #infoScreen{
  background-color: grey;
  opacity: 0.7;
  color: white;
  position: fixed;
  bottom: 10px;
  right: 50%;
  left: auto;
  z-index: 1;
 }
  #infoScreen p {
  padding: 5px;
  }
  
  
/*------------------ Styles for tileToggle ----------------- */
  
 #tileToggle{
  position: absolute;
  z-index: 1;
  bottom: 10px;
  left: 10px;
  color: white; /*text color*/
  background-color: #6D6D6D; /*dark grey*/
  border-radius: 5px;
 }
  #tileToggle b {
  padding: 5px
  }
  
  #tileToggle:hover {
  background-color: #BEBEBE; /*light grey*/
  cursor: pointer;
 }

 

 /*---------------- end Styles for tileToggle ----------------- */
 
.ontop {
  z-index: 5;
  position: fixed;
  width: 100%; }


.top-bar {
  z-index: 999;
  position: fixed;
  background: none repeat scroll 0 0 #6d6d6d;
  /*  this will change with screen size*/
  width: 100%; 
  height: 45px;
}

.top-bar-section li:not(.has-form) a:not(.button) {
  background: none repeat scroll 0 0 #6d6d6d; }


.top-bar-section .dropdown a /*li:not(.has-form) a:not(.button)*/ {
  background: none repeat scroll 0 0 #fff; }

.top-bar-section li:not(.has-form) a:hover:not(.button) {
 background: #BEBEBE; 

  }


#audioText h1, #audioText h2, #audioText h3, #audioText p, #audioText ul,  {
  margin-right: 10px;
  padding: 5px 5px 5px 5px;
  color: #fff;
}

#audioText p{
  font-size: 1em;
}

.leaflet-control-zoom {
 /* top: 250px;*/

}




@media only screen and (min-width: 0em) and (max-width: 40em) {
  #map{
  z-index: 800;
  height: 100%;
}
  .top-bar, .top-bar-section {
    bottom: 0px;
    height: 45px; }
  audio {
      top: 8px;
      left: 8px;
      position: relative;
      width: 65%;
    } 
  #tileToggle{
  top: 10px;
  height: 21px;
 }
.script {
  margin: 15px 0 0 0;
  color: #000;
  height: 100%;
  background-color: #fff;
  width: 100%;
  padding: -10px;
}
#textModal{
  width: 100%;
  height: 100%;
}
.reveal-modal.open{
  top: 0px;
}
.reveal-modal-bg {
  background: #fff;
}

 }}
  /*---------------- mid range / for tablet ----------------- */

  /*---------------- Large range / for Desktop & Laptop ----------------- */

  /*---------------- Extra Large range / for Desktop ----------------- */


/* sccs$joyride-tip-position-offset: 22px; */


 

